--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
     "tabWidth": 4,
-    "useTabs": false,
+    "semi": false,
     "singleQuote": true,
     "trailingComma": "all",
     "plugins": ["@prettier/plugin-php"]
