--- a/.env
+++ b/.env
@@ -14,6 +14,8 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+AKISMET_KEY=4030b3d5dbf3
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=12592513e7d3f771f2a5f11b0860cd28
