--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -1,2 +1,3 @@
-"https://{all}/": { type: upstream, upstream: "app:http" }
-"http://{all}/": { type: redirect, to: "https://{all}/" }
+'https://{all}/':
+    { type: upstream, upstream: 'varnish:http', cache: { enabled: false } }
+'http://{all}/': { type: redirect, to: 'https://{all}/' }
