--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -1,6 +1,16 @@
-
 database:
     type: postgresql:16
     disk: 1024
 
+varnish:
+    type: varnish:6.0
+    relationships:
+        application: 'app:http'
+    configuration:
+        vcl: !include
+            type: string
+            path: config.vcl
 
+files:
+    type: network-storage:2.0
+    disk: 256
