--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -60,6 +60,13 @@ crons:
     clean-expired-sessions:
         spec: '17,47 * * * *'
         cmd: croncape php-session-clean
+    comment_cleanup:
+        # Cleanup every night at 11.50 pm (UTC).
+        spec: '50 23 * * *'
+        cmd: |
+            if [ "$PLATFORM_ENVIRONMENT_TYPE" = "production" ]; then
+                croncape symfony console app:comment:cleanup
+            fi
 
 workers:
     messenger:
