install methods of notification

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/doctrine-orm": "^4.0",
+        "api-platform/symfony": "^4.0",
         "blackfireio/blackfire-symfony-meta": "^1.0",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
@@ -14,6 +16,7 @@
         "doctrine/orm": "^3.3",
         "easycorp/easyadmin-bundle": "4.x-dev",
         "imagine/imagine": "^1.2",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
         "symfony/asset": "6.4.*",
@@ -37,6 +40,7 @@
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
         "symfony/serializer": "6.4.*",
+        "symfony/slack-notifier": "6.4.*",
         "symfony/stimulus-bundle": "^2.22",
         "symfony/string": "6.4.*",
         "symfony/translation": "6.4.*",
