--- a/php.ini
+++ b/php.ini
@@ -6,3 +6,7 @@ session.gc_probability=0
 session.use_strict_mode=On
 realpath_cache_ttl=3600
 zend.detect_unicode=Off
+
+[xdebug]
+xdebug.mode=debug
+xdebug.start_with_request=yes
